Now there's your problem

--- a/Escape Room/Escape Room.vcxproj.filters
+++ b/Escape Room/Escape Room.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="asset.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="box.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
