--- a/Escape Room/Escape Room.vcxproj
+++ b/Escape Room/Escape Room.vcxproj
@@ -147,6 +147,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="assetman.hpp" />
+    <ClInclude Include="box.hpp" />
     <ClInclude Include="game.hpp" />
     <ClInclude Include="asset.h" />
     <ClInclude Include="mainmenu.hpp" />
